--- a/src/secp256k1/.gitignore
+++ b/src/secp256k1/.gitignore
@@ -25,8 +25,19 @@ config.status
 libtool
 .deps/
 .dirstamp
-\!build-aux/m4/ax_prog_cc_for_build.m4
-\!build-aux/m4/bitcoin_secp.m4
+build-aux/compile
+build-aux/config.guess
+build-aux/config.sub
+build-aux/depcomp
+build-aux/install-sh
+build-aux/ltmain.sh
+build-aux/m4/libtool.m4
+build-aux/m4/ltoptions.m4
+build-aux/m4/ltsugar.m4
+build-aux/m4/ltversion.m4
+build-aux/m4/lt~obsolete.m4
+build-aux/missing
+build-aux/test-driver
 *.lo
 *.o
 *~
